game engine, create board, menu

--- a/OthelloGame/OthelloGame/OthelloGameConsoleApp.csproj
+++ b/OthelloGame/OthelloGame/OthelloGameConsoleApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MenuSystem\MenuSystem.csproj" />
+    <ProjectReference Include="..\OthelloGameBrain\OthelloGameBrain.csproj" />
   </ItemGroup>
 
 </Project>
