--- a/OthelloGame/DAL.Db/DAL.Db.csproj
+++ b/OthelloGame/DAL.Db/DAL.Db.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
