--- a/OthelloGame/Othello Web/OthelloWeb.csproj
+++ b/OthelloGame/Othello Web/OthelloWeb.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OthelloGameBrain\OthelloGameBrain.csproj" />
+  </ItemGroup>
+
 </Project>
